compiler/typ/tests/fixtures/diagnostics/0365_labels_wrong_x_type_05.ml.infer.expected
File "0365_labels_wrong_x_type_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0365_labels_wrong_x_type_05 is not a valid module name.

File "0365_labels_wrong_x_type_05.ml", line 2, characters 24-28:
2 | let _ = pick_epsilon ~x:true ~y:true
                            ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
